GNOME Bugzilla – Bug 637304
Name Contains Entry is not exposing accessibility
Last modified: 2011-03-16 20:49:21 UTC
Hello, We've been developing some automated tests and discovered that with gnome-utils 2.32 the accessibility on gnome-search-tool "Name Contains" text entry is not exposed, this was working fine on 2.30 and 2.31. This can be checked with Accerciser, you'll notice that there's no "Name Contains" text entry anymore on the child list of the combo. Thanks,
I could reproduce this issue with gedit as well: To reproduce: * Enable accessibility (either at-spi1 / at-spi2) * Logout / Login (if enabling accessibility for the first time) * Launch gedit * Open Find / Replace dialog * Launch accerciser * Navigate to Combo box widget of Find / Replace dialog inside accerciser Actual result: Text widget not visible, so no way to enter data in combo box using accerciser NOTE: This worked fine with all versions of Ubuntu 6.x to 10.x and started failing in Ubuntu 11.04 If you need further info, please let me know. Thanks
GTK version worked: 2.22.0 (Ubuntu 10.10) GTK version where the above issue noticed: 2.24.0 (Ubuntu 11.04)
Created attachment 183383 [details] [review] Patch. This is a regression introduced in commit 883835 -- GAIL now looks at the has-entry property of a combo box to determine whether it has a text child, as is appropriate for new combo boxes, but the old GtkComboBoxEntry class does not use this property. This patch fixes it for the gtk-2-24 branch (it is a non-issue for GTK 3 since the class is deprecated).
Review of attachment 183383 [details] [review]: Looks good.
Should be fixed for gtk+ 2.24.4 (commit ddd632).