Support GtkComboBoxEntry in GAIL again

GAIL now supports the has_entry property for combo boxes, but the old
GtkComboBoxEntry class does not use this property, so GAIL has not been
supporting it correctly in 2.24.

http://bugzilla.gnome.org/show_bug.cgi?id=637304